kubernetes/workloads/platform/databases/dragonfly/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dragonfly-system
  labels:
    # Pod Security Admission - Restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted

    app.kubernetes.io/name: dragonfly
    app.kubernetes.io/component: database
